--- a/front-end/src/components/Home/home.scss
+++ b/front-end/src/components/Home/home.scss
@@ -71,7 +71,7 @@
 
         .cardDiv{
             width: 500px;
-            height: 400px;
+            height: 600px;
             position: relative;
             padding: 2rem 1rem;
             background: var(--whiteColor);
@@ -103,6 +103,9 @@
                 &::placeholder{
                     font-size: 13px;
                 }
+            }
+            select{
+
             }
 
             .icon{
