--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -148,3 +148,7 @@
 .home .homeFooterIcon .icon:hover {
   color: var(--PrimaryColor);
 }/*# sourceMappingURL=home.css.map */
+
+.videoBg {
+  opacity: 85%;
+}
